# tradesys

./: .gitignore  CMakeLists.txt  README.md
cfg/: rate.csv
src/: main.c
src/feed/: feed.c  feed.h  main.c  quote.c  quote.h  rate.c  rate.h  server.c  server.h
src/sig/: clock.c  clock.h
src/strategy/: client.c  client.h  main.c  strategy.c  strategy.h
